feat: 後臺訂單退回及出貨按鈕功能

--- a/src/back_order.html
+++ b/src/back_order.html
@@ -19,8 +19,8 @@
             })
             <div class="btn_area">
                 <div>
-                    <button id="new_order" type="button" class="btn-yellow">退回</button>
-                    <button id="del_order" type="button" class="btn-red">出貨</button>
+                    <button id="return_order" type="button" class="btn-yellow">退回</button>
+                    <button id="ship_order" type="button" class="btn-red">出貨</button>
                 </div>
                 <div class="search-area">
                     <input type="text" name="search" id="search_order">
@@ -43,7 +43,7 @@
 
                     <li>
                         <label class="check_container">
-                            <input class="checkBox" type="checkbox">
+                            <input class="checkBox check-order" type="checkbox">
                             <span class="checkmark"></span>
                         </label>
                         <p class="order_number">8601</p>
@@ -51,115 +51,114 @@
                         <p class="order_cost">88811</p>
                         <p class="order_price">$860</p>
                         <p class="order_condition">撿貨中</p>
-                        <!-- <p class="order_condition">上架中</p> -->
                         <button type="button" class="btn-green order_edit">...</button>
                     </li>
                     <li>
                         <label class="check_container">
-                            <input class="checkBox" type="checkbox">
+                            <input class="checkBox check-order" type="checkbox">
                             <span class="checkmark"></span>
                         </label>
                         <p class="order_number">8600</p>
                         <p class="order_name">2022/03/15</p>
                         <p class="order_cost">25012</p>
                         <p class="order_price">$700</p>
-                        <p class="order_inStock">出貨中</p>
+                        <p class="order_condition">出貨中</p>
                         <button type="button" class="btn-green order_edit">...</button>
                     </li>
                     <li>
                         <label class="check_container">
-                            <input class="checkBox" type="checkbox">
+                            <input class="checkBox check-order" type="checkbox">
                             <span class="checkmark"></span>
                         </label>
                         <p class="order_number">8599</p>
                         <p class="order_name">2022/03/15</p>
                         <p class="order_cost">866513</p>
                         <p class="order_price">$390</p>
-                        <p class="order_inStock">已送達</p>
+                        <p class="order_condition">已送達</p>
                         <button type="button" class="btn-green order_edit">...</button>
                     </li>
                     <li>
                         <label class="check_container">
-                            <input class="checkBox" type="checkbox">
+                            <input class="checkBox check-order" type="checkbox">
                             <span class="checkmark"></span>
                         </label>
                         <p class="order_number">8598</p>
                         <p class="order_name">2022/03/14</p>
                         <p class="order_cost">74224</p>
                         <p class="order_price">$580</p>
-                        <p class="order_inStock">已送達</p>
+                        <p class="order_condition">已送達</p>
                         <button type="button" class="btn-green order_edit">...</button>
                     </li>
                     <li>
                         <label class="check_container">
-                            <input class="checkBox" type="checkbox">
+                            <input class="checkBox check-order" type="checkbox">
                             <span class="checkmark"></span>
                         </label>
                         <p class="order_number">8597</p>
                         <p class="order_name">2022/03/11</p>
                         <p class="order_cost">02416</p>
                         <p class="order_price">$290</p>
-                        <p class="order_inStock">已送達</p>
+                        <p class="order_condition">已送達</p>
                         <button type="button" class="btn-green order_edit">...</button>
                     </li>
                     <li>
                         <label class="check_container">
-                            <input class="checkBox" type="checkbox">
+                            <input class="checkBox check-order" type="checkbox">
                             <span class="checkmark"></span>
                         </label>
                         <p class="order_number">8596</p>
                         <p class="order_name">2022/03/01</p>
                         <p class="order_cost">65727</p>
                         <p class="order_price">$450</p>
-                        <p class="order_inStock">已送達</p>
+                        <p class="order_condition">已送達</p>
                         <button type="button" class="btn-green order_edit">...</button>
                     </li>
                     <li>
                         <label class="check_container">
-                            <input class="checkBox" type="checkbox">
+                            <input class="checkBox check-order" type="checkbox">
                             <span class="checkmark"></span>
                         </label>
                         <p class="order_number">8595</p>
                         <p class="order_name">2022/02/15</p>
                         <p class="order_cost">65727</p>
                         <p class="order_price">$590</p>
-                        <p class="order_inStock">已送達</p>
+                        <p class="order_condition">已送達</p>
                         <button type="button" class="btn-green order_edit">...</button>
                     </li>
                     <li>
                         <label class="check_container">
-                            <input class="checkBox" type="checkbox">
+                            <input class="checkBox check-order" type="checkbox">
                             <span class="checkmark"></span>
                         </label>
                         <p class="order_number">8594</p>
                         <p class="order_name">2022/02/10</p>
                         <p class="order_cost">75428</p>
                         <p class="order_price">$450</p>
-                        <p class="order_inStock">已送達</p>
+                        <p class="order_condition">已送達</p>
                         <button type="button" class="btn-green order_edit">...</button>
                     </li>
                     <li>
                         <label class="check_container">
-                            <input class="checkBox" type="checkbox">
+                            <input class="checkBox check-order" type="checkbox">
                             <span class="checkmark"></span>
                         </label>
                         <p class="order_number">8593</p>
                         <p class="order_name">2022/01/15</p>
                         <p class="order_cost">46728</p>
                         <p class="order_price">$1190</p>
-                        <p class="order_inStock">已送達</p>
+                        <p class="order_condition">已送達</p>
                         <button type="button" class="btn-green order_edit">...</button>
                     </li>
                     <li>
                         <label class="check_container">
-                            <input class="checkBox" type="checkbox">
+                            <input class="checkBox check-order" type="checkbox">
                             <span class="checkmark"></span>
                         </label>
                         <p class="order_number">8592</p>
                         <p class="order_name">2022/01/15</p>
                         <p class="order_cost">78908</p>
                         <p class="order_price">$290</p>
-                        <p class="order_inStock">已送達</p>
+                        <p class="order_condition">已送達</p>
                         <button type="button" class="btn-green order_edit">...</button>
                     </li>
                 </ul>
@@ -192,6 +191,7 @@
             </div>
         </div>
 
+    <script src="js/back_order.js"></script>
 </body>
 
 </html>
