feat:game entrance button

--- a/src/activity.html
+++ b/src/activity.html
@@ -58,6 +58,13 @@
             <img class="modal_img" src="./img/activity/horse1.png" alt="">
         </div>
 
+        <!--小遊戲按鈕-->
+
+        <div class="game"><a href="./game.html">
+                <img src="./img/activity/game_entrance.png" alt="">
+                <h5>線上體驗</h5>
+            </a></div>
+
         <!-- 點擊展開item區域 -->
         <section class="odd_item" v-for="(aaa,key) in all_data[activeIndex].list">
 
