--- a/src/back_login.html
+++ b/src/back_login.html
@@ -2,7 +2,7 @@
 <html lang="zh-Hant">
 <head>
     @@include('./layout/back_head.html', {
-        "title" : "Sìkha 後台登入頁"
+        "title" : "Sìkha 後台 | 登入"
     })
 </head>
 
