--- a/src/news_in.html
+++ b/src/news_in.html
@@ -16,8 +16,8 @@
         <img src="./img/material/circle_red_800.png" class="redboll">
         <img src="./img/material/circle_yellow_800.png" class="yellowboll">
 
-        <div class="mainup">
-            <h2>最新消息</h2>
+        <div class="newsTop container-fluid">
+            <h3 class="pageTitle">最新消息</h3>
         </div>
 
         <main class="main_min container-lg">
