--- a/src/back_index.html
+++ b/src/back_index.html
@@ -13,11 +13,11 @@
     <h4>後台首頁</h4>
     <ul class="bi_fuc">
        
-    <li><a href="#"><img src="./img/icon/mem.png" alt=""><sapn>會員查詢<sapn></sapn></a></li>
-    <li><a href="#"><img src="./img/icon/news.png" alt="">最新消息管理</a></li>
-    <li><a href="#"><img src="./img/icon/bag.png" alt="">商品管理</a></li> 
-    <li><a href="#"><img src="./img/icon/list.png" alt="">訂單管理</a></li>
-    <li><a href="#"><img src="./img/icon/cal.png" alt="">活動管理</a></li>
+    <li><a href="./member_mg.html"><img src="./img/icon/mem.png" alt=""><sapn>會員查詢<sapn></sapn></a></li>
+    <li><a href="./back_news.html"><img src="./img/icon/news.png" alt="">最新消息管理</a></li>
+    <li><a href="./back_products.html"><img src="./img/icon/bag.png" alt="">商品管理</a></li> 
+    <li><a href="./back_order.html"><img src="./img/icon/list.png" alt="">訂單管理</a></li>
+    <li><a href="./back_activity.html"><img src="./img/icon/cal.png" alt="">活動管理</a></li>
 
 
     </ul>
