data:資料夾名字打錯 fix: 圖片路徑修正

--- a/src/back_product_detail.html
+++ b/src/back_product_detail.html
@@ -96,7 +96,7 @@
                         <li class="prd_introduce">
                             <input type="file" name="" class="select_introPic">
                             <div class="select_image">
-                                <img src="./img/porducts/cow_1200.jpg" alt=""><span>更換圖片</span>
+                                <img src="./img/products/cow_1200.jpg" alt=""><span>更換圖片</span>
                             </div>
                             <textarea type="text" class="prd_introduce_input" row="1" cols="2"
                                 maxlength="30"></textarea>
