--- a/src/back_products.html
+++ b/src/back_products.html
@@ -69,7 +69,7 @@
                             <input type="checkbox" class="select_item">
                             <span class="checkmark"></span>
                         </label>
-                        <img src="./img/porducts/papaya.jpg" alt="" class="prd_pic">
+                        <img src="./img/products/papaya.jpg" alt="" class="prd_pic">
                         <p class="prd_number">37741249</p>
                         <p class="prd_name">木瓜牛奶(六入組)</p>
                         <p class="prd_cost">239</p>
@@ -83,7 +83,7 @@
                             <input type="checkbox" class="select_item">
                             <span class="checkmark"></span>
                         </label>
-                        <img src="./img/porducts/panna_cotta.jpg" alt="" class="prd_pic">
+                        <img src="./img/products/panna_cotta.jpg" alt="" class="prd_pic">
                         <p class="prd_number">37741250</p>
                         <p class="prd_name">鮮奶酪</p>
                         <p class="prd_cost">239</p>
@@ -97,7 +97,7 @@
                             <input type="checkbox" class="select_item">
                             <span class="checkmark"></span>
                         </label>
-                        <img src="./img/porducts/blanket_y.jpg" alt="" class="prd_pic">
+                        <img src="./img/products/blanket_y.jpg" alt="" class="prd_pic">
                         <p class="prd_number">37741251</p>
                         <p class="prd_name">羊毛毯(黃)</p>
                         <p class="prd_cost">339</p>
@@ -111,7 +111,7 @@
                             <input type="checkbox" class="select_item">
                             <span class="checkmark"></span>
                         </label>
-                        <img src="./img/porducts/animal_cookies.jpg" alt="" class="prd_pic">
+                        <img src="./img/products/animal_cookies.jpg" alt="" class="prd_pic">
                         <p class="prd_number">37741252</p>
                         <p class="prd_name">動物餅乾</p>
                         <p class="prd_cost">120</p>
