--- a/src/product_detail.html
+++ b/src/product_detail.html
@@ -27,9 +27,9 @@
                     <div class="splide01">
                         <div class="splide__track">
                             <ul class="splide__list">
-                                <li class="splide__slide"><img src="./img/porducts/strawberry_1200.jpg" alt=""></li>
-                                <li class="splide__slide"><img src="./img/porducts/berry2_1200.jpg" alt=""></li>
-                                <li class="splide__slide"><img src="./img/porducts/berry3_1200.jpg" alt=""></li>
+                                <li class="splide__slide"><img src="./img/products/strawberry_1200.jpg" alt=""></li>
+                                <li class="splide__slide"><img src="./img/products/berry2_1200.jpg" alt=""></li>
+                                <li class="splide__slide"><img src="./img/products/berry3_1200.jpg" alt=""></li>
                             </ul>
                         </div>
                     </div>
@@ -38,9 +38,9 @@
                         <div class="splide__track">
 
                             <ul class="splide__list under">
-                                <li class="splide__slide"><img src="./img/porducts/strawberry_1200.jpg" alt=""></li>
-                                <li class="splide__slide"><img src="./img/porducts/berry2_1200.jpg" alt=""></li>
-                                <li class="splide__slide"><img src="./img/porducts/berry3_1200.jpg" alt=""></li>
+                                <li class="splide__slide"><img src="./img/products/strawberry_1200.jpg" alt=""></li>
+                                <li class="splide__slide"><img src="./img/products/berry2_1200.jpg" alt=""></li>
+                                <li class="splide__slide"><img src="./img/products/berry3_1200.jpg" alt=""></li>
                             </ul>
 
                         </div>
@@ -77,13 +77,13 @@
         <h3 class="pd_intro_h3">商品介紹</h3>
         <div class="intro_area">
             <div class="pd_intro">
-                <div class=" pd_intro_pic"><img src="./img/porducts/cow_1200.jpg" alt="">
+                <div class=" pd_intro_pic"><img src="./img/products/cow_1200.jpg" alt="">
                 </div>
                 <p>使用每日現擠的牛乳製成，無人工反式脂肪與人工賀爾蒙</p>
             </div>
 
             <div class="pd_intro">
-                <div class="pd_intro_pic "><img src="./img/porducts/berry_1200.jpg" alt=""></div>
+                <div class="pd_intro_pic "><img src="./img/products/berry_1200.jpg" alt=""></div>
                 <p>當季限定！新鮮草莓在裡面！</p>
             </div>
         </div>
@@ -95,7 +95,7 @@
                     <ul class="pd_recommend_list splide__list">
                         <li class="splide__slide">
                             <a href="#">
-                                <img src="./img/porducts/coffee_1200.jpg" alt="">
+                                <img src="./img/products/coffee_1200.jpg" alt="">
                                 <div class="pd_recommend_text">
                                     <p class="pd_recommend_name">咖啡牛奶</p>
                                     <p class="pd_recommend_price">299</p>
@@ -105,7 +105,7 @@
 
                         <li class="splide__slide">
                             <a href="#">
-                                <img src="./img/porducts/apple.jpg" alt="">
+                                <img src="./img/products/apple.jpg" alt="">
                                 <div class="pd_recommend_text">
                                     <p class="pd_recommend_name">蘋果牛奶</p>
                                     <p class="pd_recommend_price">299</p>
@@ -114,7 +114,7 @@
                         </li>
                         <li class="splide__slide">
                             <a href="#">
-                                <img src="./img/porducts/papaya.jpg" alt="">
+                                <img src="./img/products/papaya.jpg" alt="">
                                 <div class="pd_recommend_text">
                                     <p class="pd_recommend_name">木瓜牛奶</p>
                                     <p class="pd_recommend_price">299</p>
