--- a/src/products_necessities.html
+++ b/src/products_necessities.html
@@ -42,7 +42,7 @@
 
             <a href="./product_detail.html">
                 <div class="down-in">
-                    <img src="./img/porducts/blanket_y.jpg" alt="">
+                    <img src="./img/products/blanket_y.jpg" alt="">
                     <h5>羊毛毯(黃)</h5>
                     <h5 class="price">NT$549</h5>
                 </div>
@@ -51,14 +51,14 @@
 
             <a href="./product_detail.html">
                 <div class="down-in">
-                    <img src="./img/porducts/blanket_r.jpg" alt="">
+                    <img src="./img/products/blanket_r.jpg" alt="">
                     <h5>羊毛毯(紅)</h5>
                     <h5 class="price">NT$549</h5>
                 </div>
             </a>
             <a href="./product_detail.html">
                 <div class="down-in">
-                    <img src="./img/porducts/blanket_g.jpg" alt="">
+                    <img src="./img/products/blanket_g.jpg" alt="">
                     <h5>羊毛毯(綠)</h5>
                     <h5 class="price">NT$549</h5>
                 </div>
