--- a/src/products_refrigeration.html
+++ b/src/products_refrigeration.html
@@ -41,28 +41,28 @@
         <div class="main_down container-lg">
             <a href="./product_detail.html">
                 <div class="down-in">
-                    <img src="./img/porducts/panna_cotta.jpg" alt="">
+                    <img src="./img/products/panna_cotta.jpg" alt="">
                     <h5>鮮奶烙</h5>
                     <h5 class="price">NT$399</h5>
                 </div>
             </a>
             <a href="./product_detail.html">
                 <div class="down-in">
-                    <img src="./img/porducts/cheese_cake.jpg" alt="">
+                    <img src="./img/products/cheese_cake.jpg" alt="">
                     <h5>乳酪蛋糕</h5>
                     <h5 class="price">NT$580</h5>
                 </div>
             </a>
             <a href="./product_detail.html">
                 <div class="down-in">
-                    <img src="./img/porducts/coffe.png" alt="">
+                    <img src="./img/products/coffe.png" alt="">
                     <h5>咖啡牛奶(六入)</h5>
                     <h5 class="price">NT$290</h5>
                 </div>
             </a>
             <a href="./product_detail.html">
                 <div class="down-in">
-                    <img src="./img/porducts/strawberry.png" alt="">
+                    <img src="./img/products/strawberry.png" alt="">
                     <h5>草莓牛奶(六入)</h5>
                     <h5 class="price">NT$299</h5>
                 </div>
@@ -70,14 +70,14 @@
 
             <a href="./product_detail.html">
                 <div class="down-in">
-                    <img src="./img/porducts/cream_roll.jpg" alt="">
+                    <img src="./img/products/cream_roll.jpg" alt="">
                     <h5>生乳捲</h5>
                     <h5 class="price">NT$349</h5>
                 </div>
             </a>
             <a href="./product_detail.html">
                 <div class="down-in">
-                    <img src="./img/porducts/animal_cookies.jpg" alt="">
+                    <img src="./img/products/animal_cookies.jpg" alt="">
                     <h5>動物餅乾</h5>
                     <h5 class="price">NT$200</h5>
                 </div>
