--- a/src/animal.html
+++ b/src/animal.html
@@ -57,7 +57,9 @@
             <!-- data -->
             <section v-for="(animalItem,key) in all_data" :class="[activeIndex == key ? '_on' : '']" :id="'s_' + key">
                 <div class="animalItem">
-                    <div class="animalItem_cover"><img :src="animalItem.image" alt=""></div>
+                    <div class="animalItemImg_cover">
+                        <img class="animalItem_img" :src="animalItem.image" alt="">
+                    </div>
                     <div class="animalItem_p">
                         <h5 class="animalItem_title">{{animalItem.title}}</h5>
                         <p class="animalItem_desc">{{animalItem.desc}}
