--- a/src/animal.html
+++ b/src/animal.html
@@ -57,7 +57,7 @@
             <!-- data -->
             <section v-for="(animalItem,key) in all_data" :class="[activeIndex == key ? '_on' : '']" :id="'s_' + key">
                 <div class="animalItem">
-                    <div class="animalItemImg_cover">
+                    <div class="animalImg_cover">
                         <img class="animalItem_img" :src="animalItem.image" alt="">
                     </div>
                     <div class="animalItem_p">
