--- a/src/checkout.html
+++ b/src/checkout.html
@@ -13,10 +13,12 @@
 					<p class="stepNB">1</p>
 					訂單資料
 				</li>
+				<span></span>
 				<li :class="{ active: step == 'B' }">
 					<p class="stepNB">2</p>
 					付款資訊
 				</li>
+				<span></span>
 				<li :class="{ active: step == 'C' }">
 					<p class="stepNB">3</p>
 					訂單確認
