--- a/src/back_order.html
+++ b/src/back_order.html
@@ -51,7 +51,7 @@
                         <p class="order_member">88811</p>
                         <p class="order_price">$860</p>
                         <p class="order_condition">撿貨中</p>
-                        <button type="button" class="btn-green order_edit">...</button>
+                        <button type="button" class="btn-green order_info">...</button>
                     </li>
                     <li class="order-li">
                         <label class="check_container">
@@ -63,7 +63,7 @@
                         <p class="order_member">25012</p>
                         <p class="order_price">$700</p>
                         <p class="order_condition">出貨中</p>
-                        <button type="button" class="btn-green order_edit">...</button>
+                        <button type="button" class="btn-green order_info">...</button>
                     </li>
                     <li class="order-li">
                         <label class="check_container">
@@ -75,7 +75,7 @@
                         <p class="order_member">866513</p>
                         <p class="order_price">$390</p>
                         <p class="order_condition">已送達</p>
-                        <button type="button" class="btn-green order_edit">...</button>
+                        <button type="button" class="btn-green order_info">...</button>
                     </li>
                     <li class="order-li">
                         <label class="check_container">
@@ -87,7 +87,7 @@
                         <p class="order_member">74224</p>
                         <p class="order_price">$580</p>
                         <p class="order_condition">已送達</p>
-                        <button type="button" class="btn-green order_edit">...</button>
+                        <button type="button" class="btn-green order_info">...</button>
                     </li>
                     <li class="order-li">
                         <label class="check_container">
@@ -99,7 +99,7 @@
                         <p class="order_member">02416</p>
                         <p class="order_price">$290</p>
                         <p class="order_condition">已送達</p>
-                        <button type="button" class="btn-green order_edit">...</button>
+                        <button type="button" class="btn-green order_info">...</button>
                     </li>
                     <li class="order-li">
                         <label class="check_container">
@@ -111,7 +111,7 @@
                         <p class="order_member">65727</p>
                         <p class="order_price">$450</p>
                         <p class="order_condition">已送達</p>
-                        <button type="button" class="btn-green order_edit">...</button>
+                        <button type="button" class="btn-green order_info">...</button>
                     </li>
                     <li class="order-li">
                         <label class="check_container">
@@ -123,7 +123,7 @@
                         <p class="order_member">65727</p>
                         <p class="order_price">$590</p>
                         <p class="order_condition">已送達</p>
-                        <button type="button" class="btn-green order_edit">...</button>
+                        <button type="button" class="btn-green order_info">...</button>
                     </li>
                     <li class="order-li">
                         <label class="check_container">
@@ -135,7 +135,7 @@
                         <p class="order_member">75428</p>
                         <p class="order_price">$450</p>
                         <p class="order_condition">已送達</p>
-                        <button type="button" class="btn-green order_edit">...</button>
+                        <button type="button" class="btn-green order_info">...</button>
                     </li>
                     <li class="order-li">
                         <label class="check_container">
@@ -147,7 +147,7 @@
                         <p class="order_member">46728</p>
                         <p class="order_price">$1190</p>
                         <p class="order_condition">已送達</p>
-                        <button type="button" class="btn-green order_edit">...</button>
+                        <button type="button" class="btn-green order_info">...</button>
                     </li>
                     <li class="order-li">
                         <label class="check_container">
@@ -159,7 +159,7 @@
                         <p class="order_member">78908</p>
                         <p class="order_price">$290</p>
                         <p class="order_condition">已送達</p>
-                        <button type="button" class="btn-green order_edit">...</button>
+                        <button type="button" class="btn-green order_info">...</button>
                     </li>
                 </ul>
 
@@ -189,6 +189,8 @@
 
 
             </div>
+
+            <p class="tibameMessage">本網站為緯育TibaMe前端設計工程師班第72期第二組學員專題成果作品，本平台僅供學習、展示之用。</p>
         </div>
 
     <script src="js/back_order.js"></script>
