style: 會員中心首圖修正

--- a/src/member.html
+++ b/src/member.html
@@ -12,10 +12,13 @@
     @@include('./layout/header.html')
 
     <!-- 首圖 -->
-    <div class="member_top">
-
+    <!-- <div class="member_top">
         <h2 class="memberTitle">會員中心</h2>
+    </div> -->
+    <div class="memberTop container-fluid">
+        <h3 class="pageTitle">會員中心</h3>
     </div>
+
     <div class="mb_container">
         <!-- 切換btn -->
         <div class="mem_tab">
