data: 刪除不用的圖片

--- a/src/back_login.html
+++ b/src/back_login.html
@@ -33,6 +33,7 @@
 
 <script>
     // 登入按鈕目前直接跳轉後台首頁
+    // TODO: 驗證管理員帳密
     $('.bl_btn').on("click", function(){
         window.location.href = "./back_index.html";
     });
