--- a/src/product_detail.html
+++ b/src/product_detail.html
@@ -51,7 +51,7 @@
             <!-- 主圖區塊結束 -->
             <div class="pd_info">
                 <h3 id="pd_info_name">草莓牛奶(六入組)</h3>
-                <h5 class="pd_info_slog">原果新鮮草莓牛奶</p>
+                <h5 class="pd_info_slog">原果新鮮草莓牛奶</h5>
                     <h5 class="pd_info_slog">全部手工現做果汁現煮</h5>
                     <p id="pd_info_ingredient">．成分：生乳、水、糖、草莓汁 <BR>．保存期限：冷藏14天</p>
                     <h4 id="pd_info_pricr">299</h4>
