feat: 小遊戲結束後出現滑鼠游標

--- a/src/game.html
+++ b/src/game.html
@@ -105,6 +105,13 @@
                 setTimeout(function(){
                     $('.game_message_out').fadeIn(1000);
                 }, 2300)
+                setTimeout(function(){
+                    $('.game-html').css("cursor", "default");
+                    $('#shaver').fadeOut(100);
+                }, 2150)
+                setTimeout(function(){
+                    $('#shaver').remove();
+                }, 2250)
             }
         };
 
