style: 後臺按鈕位置統一

--- a/src/back_products.html
+++ b/src/back_products.html
@@ -22,15 +22,18 @@
             <div class="btn_area">
                 <div class="btn1">
                     <div class="UD">
+                        <button id="new_pd" type="button" class="btn-yellow">新增</button>
                         <button id="on_pd" type="button" class="btn-green">上架</button>
                         <button id="off_pd" type="button" class="btn-green">下架</button>
+                        <button id="del_pd" type="button" class="btn-red">刪除</button>
                     </div>
 
-                    <div class="NDS">
-                        <button id="new_pd" type="button" class="btn-yellow">新增</button>
-                        <button id="del_pd" type="button" class="btn-red">刪除</button>
+                    <div class="NDS search-area">
                         <input type="text" name="search" id="search">
-                        <button id="search_pd" type="button" class="btn-green">搜尋</button>
+                        <img src="./img/icon/search.png" alt="" class="search_icon" id="search_pd">
+                        
+                        <!-- <input type="text" name="search" id="search">
+                        <button  type="button" class="btn-green">搜尋</button> -->
                     </div>
 
 
