--- a/src/member_mg.html
+++ b/src/member_mg.html
@@ -15,7 +15,7 @@
                 <img src="./img/backpages/title_cow_right.png" alt="" class="mb_cow">
             </div>
             <div class="search">
-                <label for="" class="memberId">會員編號查詢</label>
+                <label for="" class="memberId">會員查詢</label>
                 <input type="text" class="mbId_text" id="member_search">
                 <img src="./img/icon/search.png" alt="" class="search_icon">
             </div>
