--- a/src/back_order.html
+++ b/src/back_order.html
@@ -19,7 +19,7 @@
             })
             <div class="o_btn_area">
                 <div>
-                    <button id="return_order" type="button" class="btn-yellow">退回</button>
+                    <button id="return_order" type="button" class="btn-yellow">退貨</button>
                     <button id="ship_order" type="button" class="btn-red">出貨</button>
                 </div>
                 <div class="search-area">
